--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Although you can use them, for a more unique website, replace these images with 
                 </button>
                 <a class="navbar-brand" href="#">
                 	<span class="glyphicon glyphicon-fire"></span> 
-                	LOGO
+                	Moser's Computers
                 </a>
             </div>
             <!-- Navbar links -->
@@ -56,14 +56,14 @@ Although you can use them, for a more unique website, replace these images with 
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Products</a>
+                        <a href="#">About</a>
                     </li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
-							<li><a href="#">Engage</a></li>
-							<li><a href="#">Pontificate</a></li>
-							<li><a href="#">Synergize</a></li>
+							<li><a href="#">Building Computers</a></li>
+							<li><a href="#">Computer Repair</a></li>
+							<li><a href="#">Computer Maintenance</a></li>
 						</ul>
 					</li>
                     <li>
